--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,40 @@
-# Byte-compiled / optimized / DLL files
+.DS_Store
+Thumbs.db
+
+/.is-dev-mode
+/.is-ij-mode
+
+# Python .gitignore
 __pycache__/
-*.py[cod]
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
+*.pyc
+*.pyo
+*.pyd
+*.pdb
 *.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.egg-info/
+dist/
+build/
+*.egg-info/
+*.eggs/
 *.manifest
 *.spec
-
-# Installer logs
+*.log
+*.pot
+*.mo
+*.cache
+*.coverage
+.coverage.*
+.cache/
+.pytest_cache/
+.tox/
+.nox/
+*.env
+.env/
+.venv/
+venv/
+ENV/
+env/
+env.bak/
+venv.bak/
 pip-log.txt
 pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
